Fix content overlap in the Select component with long labels

--- a/packages/react/src/components/dropdown/select/Select.module.scss
+++ b/packages/react/src/components/dropdown/select/Select.module.scss
@@ -44,6 +44,13 @@
 }
 
 /**
+ * THE BUTTON LABEL (SELECTED VALUE OR PLACEHOLDER)
+ */
+.buttonLabel {
+  padding-right: var(--spacing-layout-xs);
+}
+
+/**
  * ICON
  */
 
